<resources>
    <string name="app_name">Educastion</string>
    <string name="Home">Home</string>
    <string name="Subject">Subject</string>
    <string name="Tips">Tips</string>
    <string name="Add_Subject">Add Subject</string>
    <string name="Mata_Kuliah">Mata Kuliah</string>
    <string name="Jumlah_SKS">Jumlah SKS</string>
    <string name="SKS">sks</string>
    <string name="title_activity_insertnilai">insertnilai</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="EditSubject">Edit Subject</string>
    <string name="Nilai">nilai</string>
    <string name="Bobot">bobot (%)</string>
    <string name="input_nilai_saa1">Nilai SAA 1</string>
    <string name="input_nilai_saa2">Nilai SAA 2</string>
    <string name="input_nilai_saa3" translatable="false">Nilai SAA 3</string>
    <string name="input_nilai_uts">Nilai UTS</string>
    <string name="input_nilai_uas">Nilai UAS</string>
    <string name="TargetGrade">Target Grade</string>
    <string name="AverageScore">Average Score</string>
    <string name="Four">4.00</string>
    <string name="ThreeSevenFive">3.75</string>
    <string name="ThreeFive">3.50</string>
    <string name="Three">3.00</string>
    <string name="Mindmapping">Mind Mapping</string>
    <string name="MindMapText">Mind Mapping adalah salah satu teknik belajar dengan cara menggambar sebuah diagram/peta konsep. Mind Mapping salah satu teknik belajar yang paling populer di kalangan remaja. Untuk mengetahui lebih lanjut tentang Mind Mapping, silahkan klik tombol di bawah ini.</string>
    <string name="mm">Start Mind Mapping!</string>
</resources>
